--- a/indexrootmediya.html
+++ b/indexrootmediya.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,16 @@
     <link rel="stylesheet" href="./stylerootmediya.css">
     <title>Rootmediya</title>
 </head>
+
 <body>
-    
+
+    <h1>hello</h1>
+    <h2>hello</h2>
+    <h3>hello</h3>
+    <h4>hello</h4>
+    <h5>hello</h5>
+    <h6>hello</h6>
+
 </body>
+
 </html>
