--- a/index.html
+++ b/index.html
@@ -11,38 +11,21 @@
 
 <body>
 
+    <h1>hello</h1>
+
     <div class="menu">
 
-        <div class="box1">
+        <div class="box box1"></div>
 
-            <div class="box">
-                <h1>1</h1>
-            </div>
+        <div class="box box2 "></div>
 
+        <div class="box box3 "></div>
 
-            <div class="box">
-                <h1>2</h1>
-            </div>
-
-        </div>
-
-
-
-        <div class="box1">
-
-            <div class="box">
-                <h1>3</h1>
-            </div>
-
-
-            <div class="box">
-                <h1>4</h1>
-            </div>
-
-        </div>
-
+        <div class="box box4 "></div>
 
     </div>
+
+
 
 </body>
 
